--- a/closed-captions/css.css
+++ b/closed-captions/css.css
@@ -5,6 +5,15 @@ Show them when they receive the class 'on'
 Hide them when they receive the class 'off'
 Feel free to adjust the defaults to your needs.
 ********************************************** */
+
+html {
+background-color: black;
+}
+
+
+
+
+
 #closed-captions p {
 	opacity: 0;
 	transition: .05s;
@@ -17,14 +26,61 @@ Feel free to adjust the defaults to your needs.
 	transition: .2s;
 	opacity: 0;
 }
+
+#video-placeholder {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 15em;
+
+
+}
+
 .voice1 {
+	/* robot voice */
+	font-family: monospace;
+color: white;
+margin-top: -10em;
+margin-left: 6em;
+font-size: 21px;
+max-width: 300px;
+
+}
+
+.voice2 {
+	/* ryan gosling voice */
 	font-style: italic;
+	color: red;
+	font-size: 21px;
+	margin-left: 51em;
+	margin-top: -10em;
+}
+
+
+
+
+.voice3 {
+	font-style: italic;
+	color: white;
+	font-size: 30px;
+	margin-left: 19em;
+	margin-top: -12em;
+}
+
+.voice4 {
+	font-style: italic;
+	color: green;
+	font-size: 21px;
+	margin-top: -20em;
+	margin-left: 33em;
+
+
 }
 
 /* **********************************************
-The first paragraph, with extended timing for 
+The first paragraph, with extended timing for
 	all siblings. Basically what it does is that
-	it shows the text after a delay, which 
+	it shows the text after a delay, which
 	corresponds with the time that the word is
 	spoken.
 You probably want to change the styling.
@@ -32,52 +88,67 @@ You probably want to change the styling.
 .p0 span {
 	opacity: 0;
 	font-family: brenner;
+	font-family: monospace;
 }
 .p0.on span:first-of-type {
 	opacity: 1;
 	transition: 0s;
 	font-weight: 200;
+	font-family: monospace;
 }
 .p0.on span:nth-of-type(2) {
 	opacity: 1;
 	transition: 0s .4s;
 	margin-right: -.25em;
 	font-weight: 400;
+	color: green;
+	font-family: monospace;
+
 }
 .p0.on span:nth-of-type(3) {
 	opacity: 1;
 	transition: 0s .5s;
 	margin-right: -.25em;
 	font-weight: 600;
+	color: green;
+	font-family: monospace;
+
 }
 .p0.on span:nth-of-type(4) {
 	opacity: 1;
 	transition: 0s .7s;
 	margin-right: -.25em;
 	font-weight: 800;
+	color: green;
+	font-family: monospace;
+
 }
 .p0.on span:nth-of-type(5) {
 	opacity: 1;
 	transition: 0s 1.1s;
 	margin-right: -.25em;
 	font-family: "brenner sans";
+	color: green;
 }
 .p0.on span:nth-of-type(6) {
 	opacity: 1;
 	transition: 0s 1.4s;
 	margin-right: -.25em;
 	font-family: "brenner display";
+	color: green;
 }
 .p0.on span:nth-of-type(7) {
 	opacity: 1;
 	transition: 0s 1.7s;
 	margin-right: -.25em;
 	font-family: "brenner script";
+	color: green;
 }
 .p0.on span:nth-of-type(8) {
 	opacity: 1;
 	transition: 0s 2s;
 	font-family: "brenner script";
+	color: green;
 }
 .p0.on span:nth-of-type(9) {
 	opacity: 1;
@@ -94,3 +165,41 @@ You probably want to change the styling.
 	transition: 0s 3.7s;
 	font-family: "brenner slab";
 }
+
+
+
+
+
+
+
+
+/* scene 2 */
+
+
+
+/* cells robot */
+.p48 span {
+	opacity: 0;
+	font-family: brenner;
+	font-family: monospace;
+}
+.p48.on span:first-of-type {
+	opacity: 1;
+	transition: 0s;
+	font-weight: 200;
+	font-family: monospace;
+}
+/* cells robot *end* */
+
+/* ryan */
+.p49 span {
+	opacity: 0;
+	font-family: brenner;
+	font-family: monospace;
+}
+.p49.on span:first-of-type {
+	font-style: italic;
+	color: red;
+	font-size: 21px;
+	margin-left: 51em;
+	margin-top: -10em;
